tests/oopsla2017_paper_examples/oopsla2017_paper_examples.exp
Error ------------------------------------------------------------------------------------------------- example1.js:3:23

Cannot call `f` because null [1] is not a function.

   example1.js:3:23
   3| function pipe(x, f) { f(x); }
                            ^

References:
   example1.js:6:15
   6| pipe("hello", null); // error
                    ^^^^ [1]


Error ------------------------------------------------------------------------------------------------ example5.js:12:12

Cannot get `x.kind` because property `kind` is missing in null [1].

   example5.js:12:12
   12|   return x.kind; // error
                  ^^^^

References:
   example5.js:9:27
    9|   let reset = () => { x = null; }
                                 ^^^^ [1]


Error ------------------------------------------------------------------------------------------------- example6.js:9:10

Could not decide which case to select, since case 1 [1] may work but if it doesn't case 2 [2] looks promising too. To
fix add a type annotation to return [3] or to `x` [4].

   example6.js:9:10
   9| onString(id);
               ^^

References:
   example6.js:5:18
   5| type Ambiguous = IDString | IDNullableString;
                       ^^^^^^^^ [1]
   example6.js:5:29
   5| type Ambiguous = IDString | IDNullableString;
                                  ^^^^^^^^^^^^^^^^ [2]
   example6.js:8:17
   8| let id = (x) => x;
                      ^ [3]
   example6.js:8:11
   8| let id = (x) => x;
                ^ [4]


Error ------------------------------------------------------------------------------------------------ example7.js:14:39

Cannot call `stringIsString` with object literal bound to `x` because number [1] is incompatible with string [2] in
property `val`.

   example7.js:14:39
   14| stringIsString({ type: "string", val: 0 }); // error
                                             ^ [1]

References:
   example7.js:6:28
    6|   | { type: "string", val: string }
                                  ^^^^^^ [2]



Found 4 errors
